# Oslo

./: Cargo.toml  OsloTestnetChainSpec.json  README.md
docs/: Oslo-setup-instructions.txt
node/: Cargo.toml
node-storage/: README.md
node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  main.rs  rpc.rs  service.rs
runtime/: Cargo.toml  build.rs
runtime/src/: genesis_config_preset.rs  lib.rs  precompiles.rs
runtime/src/weights/: pallet_evm_precompile_curve25519.rs  pallet_evm_precompile_sha3fips.rs
ts-tests/: package.json  truffle-config.js
ts-tests/tests/: config.ts  test-balance.ts  test-block-tags.ts  test-block.ts  test-bloom.ts  test-contract-methods.ts  test-contract-storage.ts  test-contract.ts  test-deprecated.ts  test-eip1153.ts  test-eip7702.ts  test-execute.ts  test-fee-history.ts  test-filter-api.ts  test-gas.ts  test-log-filtering.ts  test-log-tags.ts  test-max-priority-fee-per-gas-rpc.ts  test-netapi.ts  test-nonce.ts  test-pending-pool.ts  test-pending-transactions-rpc.ts  test-precompiles.ts  test-revert-reason.ts  test-revert-receipt.ts  test-rpc-constants.ts  test-selfdestruct.ts  test-state-override.ts  test-state-root.ts  test-subscription.ts  test-transaction-cost.ts  test-transaction-priority.ts  test-transaction-version.ts  test-web3api.ts  txpool.ts  util.ts
