[package]
name = "oslo-network"
version = "5.0.0-dev"
description = "The reference node for the Oslo network."
authors = ["Asad Ali (asad.sial.4142@gmail.com)", "Josey Medley"]
homepage = "https://oslocrypto.com/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "http://github.com/drmnana/Oslo"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
[[bin]]
name = "oslo-network"

[dependencies]
serde_json = { workspace = true, features = ["arbitrary_precision"] }
jsonrpsee = { version = "0.24.9", features = ["server", "macros"] }
clap = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
hex-literal = { workspace = true }
futures = { workspace = true }
array-bytes = { workspace = true }
codec = { workspace = true }
prometheus-endpoint = { workspace = true }

fp-account = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true, features = ["default"] }
fp-dynamic-fee = { workspace = true, features = ["default"] }
fp-evm = { workspace = true, features = ["default"] }

fc-rpc = { workspace = true, features = ["aura", "txpool", "rocksdb", "rpc-binary-search-estimate"] }
fc-db = { workspace = true, features = ["rocksdb"] }
fc-consensus = { workspace = true }
fc-rpc-core = { workspace = true }
fc-mapping-sync = { workspace = true, features = ["rocksdb"] }
fc-api = { workspace = true }
fc-storage = { workspace = true }
fc-cli = { workspace = true, features = ["rocksdb"] }

sp-io = { workspace = true, features = ["default"] }
sp-consensus-aura = { workspace = true, features = ["default"] }
sp-consensus-grandpa = { workspace = true, features = ["default"] }
sp-timestamp = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sp-api = { workspace = true, features = ["default"] }
sp-inherents = { workspace = true, features = ["default"] }
sp-transaction-pool = { workspace = true, features = ["default"] }
sp-session = { workspace = true, features = ["default"] }
sp-offchain = { workspace = true, features = ["default"] }

sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-manual-seal = { workspace = true, optional = true }
sc-cli = { workspace = true, features = ["rocksdb"] }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true, features = ["rocksdb"] }
sc-telemetry = { workspace = true }
sc-keystore = { workspace = true }
sc-executor = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-offchain = { workspace = true }

pallet-transaction-payment-rpc = { workspace = true }
pallet-im-online = { workspace = true }
pallet-collective = { workspace = true }
pallet-sudo = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
#pallet-evm-polkavm = { workspace = true }

frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Cumulus primitives
cumulus-primitives-proof-size-hostfunction = { workspace = true }

# Local Dependencies
oslo-network-runtime = { workspace = true, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
ts-tests = [
	"oslo-network-runtime/ts-tests",
	"sc-consensus-manual-seal"
]

# Dependencies that are only required if runtime benchmarking should be built.
runtime-benchmarks = [
	"oslo-network-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks"
]
