[package]
name = "oslo-network-runtime"
version = "5.0.0-dev"
description = "The reference runtime for the Oslo network."
authors = { workspace = true }
homepage = "https://oslocrypto.com"
edition = "2021"
license = "Unlicense"
repository = "http://github.com/drmnana/Oslo"
publish = false

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
array-bytes = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
hex-literal = { workspace = true }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
libsecp256k1 = { workspace = true }
ethereum = { workspace = true }

pallet-assets = { workspace = true }
pallet-asset-rate = { workspace = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-collective = { workspace = true }
pallet-democracy = { workspace = true }
pallet-treasury = { workspace = true }
pallet-aura = { workspace = true }
pallet-session = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
frame-support = { workspace = true, features = ["experimental"] }
pallet-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["serde", "sp-keystore"] }
pallet-sudo = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
frame-executive = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }
sp-genesis-builder = { workspace = true, default-features = false }
validator-set = { workspace = true }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

frame-try-runtime = { workspace = true, optional = true }

# evm dependencies
pallet-evm = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-curve25519 = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-im-online = { workspace = true }
pallet-base-fee = { workspace = true }
#pallet-evm-polkavm = { workspace = true }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-account = { workspace = true, features = ["serde"] }
fp-self-contained = { workspace = true, features = ["serde"] }

[features]
default = ["std"]
ts-tests = []
std = [
	"log/std",
	"ethereum/std",
	"codec/std",
	"libsecp256k1/std",
	"scale-info/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"fp-account/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-asset-rate/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-base-fee/std",
	"pallet-evm/std",
	#"pallet-evm-polkavm/std",
	"pallet-session/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-curve25519/std",
	"pallet-ethereum/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-im-online/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-treasury/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-authorship/std",
	"sp-consensus-grandpa/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-io/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-genesis-builder/std",
	"validator-set/std",
	"substrate-wasm-builder"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking?/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]

try-runtime = [
	"fp-self-contained/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime?/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-ethereum/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-base-fee/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-session/try-runtime",
	"pallet-scheduler/try-runtime",
	"sp-runtime/try-runtime",
	"validator-set/try-runtime"
]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }
